<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="comprmto.rickyandmorty.presentation.character.viewmodel.CharacterDetailViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollIndicators="right">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="16dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/toolbarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@{viewModel.state.character.name}"
                        android:textAppearance="@style/TextAppearance.h6"
                        android:textColor="@color/basic_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageButton"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Rick Sanchez" />

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:background="@color/white"
                        android:contentDescription="@string/character_detail_back_btn_desc"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_arrow_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/toolbarText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/indigo"
                        tools:ignore="TouchTargetSizeCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:scaleType="centerCrop"
                android:src="@drawable/character_detail_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView">


            </androidx.cardview.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/characterImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                app:imageUrl="@{viewModel.state.character.image}"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView"
                tools:src="@tools:sample/avatars" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F2F2F7"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="80dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:id="@+id/characterStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@{viewModel.state.character.status}"
                    android:textAppearance="@style/TextAppearance.caption"
                    android:textColor="#6E798C"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    tools:text="Alive" />


                <TextView
                    android:id="@+id/characterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.state.character.name}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.h4"
                    android:textColor="@color/basic_black"
                    app:layout_constraintTop_toBottomOf="@id/characterStatus"
                    tools:text="Rick Sanchez" />

                <TextView
                    android:id="@+id/characterSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.state.character.species}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.subtitle1"
                    android:textColor="#8E8E93"
                    app:layout_constraintTop_toBottomOf="@id/characterName"
                    tools:text="Human" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/characterInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/informations"
                    android:textAppearance="@style/TextAppearance.h6"
                    android:textColor="@color/gray"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingBottom="4dp"
                    android:text="@string/gender"
                    android:textColor="@color/basic_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/characterGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{viewModel.state.character.gender}"
                    android:textAppearance="@style/TextAppearance.subtitle1"
                    android:textColor="#6E798C"
                    tools:text="Male" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingBottom="4dp"
                    android:text="@string/origin"
                    android:textColor="@color/basic_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/characterOrigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{viewModel.state.character.origin.name}"
                    android:textAppearance="@style/TextAppearance.subtitle1"
                    android:textColor="#6E798C"
                    tools:text="Earth (C-137)" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingBottom="4dp"
                    android:text="@string/type"
                    android:textColor="@color/basic_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/characterType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{viewModel.state.character.type}"
                    android:textAppearance="@style/TextAppearance.subtitle1"
                    android:textColor="#6E798C"
                    tools:text="Unknown" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_black" />

                <LinearLayout
                    android:id="@+id/locationGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple_effect"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingBottom="4dp"
                        android:text="@string/location"
                        android:textColor="@color/basic_black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/characterLocation"
                        android:layout_width="355dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@{viewModel.state.character.location.name}"
                        android:textAppearance="@style/TextAppearance.subtitle1"
                        android:textColor="#6E798C"
                        tools:text="Earth (Replacement Dimension)" />

                </LinearLayout>


                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_black" />


            </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@id/characterInfo"
                app:layout_constraintEnd_toEndOf="@id/characterInfo"
                app:layout_constraintTop_toTopOf="@id/characterInfo" />

            <TextView
                android:id="@+id/episodesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/episodes"
                android:textAppearance="@style/TextAppearance.h6"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/characterInfo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewEpisode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                app:bindEpisodeList="@{viewModel.state.episodeList}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/episodesText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>